k8s/deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: class-attendace-front
  namespace: production
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: class-attendace-front
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: class-attendace-front
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: class-attendace-front
  template:
    metadata:
      labels:
        app: class-attendace-front
    spec:
      containers:
        - name: class-attendace-front
          image: ghcr.io/sebastian-byui-projects/class-attendance-front:1.0.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
      imagePullSecrets:
        - name: github-registry-credentials
      restartPolicy: Always
